Update readme markdown.

--- a/output/html_docs.html
+++ b/output/html_docs.html
@@ -8,8 +8,8 @@
         <p>[description]</p>
         <p><img src="https://img.shields.io/badge/OpenAI-412991.svg?style=for-the-badge&logo=OpenAI&logoColor=white">
 				<img src="https://img.shields.io/badge/pandas-150458.svg?style=for-the-badge&logo=pandas&logoColor=white">
-				<img src="https://img.shields.io/badge/JSON-000000.svg?style=for-the-badge&logo=JSON&logoColor=white">
 				<img src="https://img.shields.io/badge/HTML5-E34F26.svg?style=for-the-badge&logo=HTML5&logoColor=white">
+				<img src="https://img.shields.io/badge/JSON-000000.svg?style=for-the-badge&logo=JSON&logoColor=white">
 				<img src="https://img.shields.io/badge/Python-3776AB.svg?style=for-the-badge&logo=Python&logoColor=white">
 				<img src="https://img.shields.io/badge/GitHub-181717.svg?style=for-the-badge&logo=GitHub&logoColor=white">
 				</p>
@@ -35,7 +35,7 @@
 <h3><i>SRC</i></h3>
                 <dl>
                 <dt><b><i>processor.py</i></b></dt>
-                <dd>This Python script contains functions related to managing a codebase. The get_requirements() function uses the pipreqs library to generate a requirements.txt file for the project. The get_tmpdir() function returns a temporary directory path, deleting and recreating it if it already exists. The clone_codebase() function clones a git repository and installs the requirements.txt file. Finally, the parse_codebase() function parses a directory of python files and returns a dictionary of</dd>
+                <dd>This script contains functions for cloning a git repository, getting file extensions, creating a temporary directory, and parsing a directory of python files. The clone_codebase() function takes a URL as an argument and clones the repository to a temporary directory, then installs the requirements.txt file. The get_file_extensions() function walks through the current working directory and returns a list of file extensions. The get_tmpdir() function creates a temporary directory if it does not already exist, and</dd>
                 </dl>
                 <dl>
                 <dt><b><i>logger.py</i></b></dt>
@@ -51,12 +51,12 @@
                 </dl>
                 <dl>
                 <dt><b><i>utils.py</i></b></dt>
-                <dd>This Python script contains four functions. The first function, get_pkgs_list(), reads a requirements.txt file and returns a list of packages. The second function, read_json(), reads a json file and returns its contents as a dictionary. The third function, write_file(), writes a file to a given path. The fourth function, markdownify(), converts a string to markdown.</dd>
+                <dd>This Python script contains four functions. The first function, get_pkgs_list(), reads a requirements.txt file and returns a list of packages. The second function, read_json(), reads a json file and returns the contents as a dictionary. The third function, write_file(), writes a file to a given path. The fourth function, md(), converts HTML to Markdown.</dd>
                 </dl>
                 <dl>
                 <dt><b><i>main.py</i></b></dt>
                 <dd>
-This Python script is used to generate a Markdown documentation from a codebase. It uses the Hydra library to read a configuration file, clones the codebase from a given URL, parses the codebase, and converts the code into text. It then creates a Pandas DataFrame with the file names and summaries, and saves it to a CSV file. It also creates a list of packages used in the codebase, creates a header with badges, and creates an HTML file</dd>
+This Python script sets up a logger, clones a codebase from a given URL, parses the codebase, creates a summary of the code, creates a list of packages used, creates HTML and Markdown documentation, and writes the documentation to the specified files.</dd>
                 </dl>
                 </div>
     <hr>
