deploy: b6c6280392b3205ecff6febeeadea6a220e90afb

--- a/cli_commands/index.html
+++ b/cli_commands/index.html
@@ -1158,7 +1158,7 @@ $ readmeai --badges flat-square --repository https://github.com/eli64s/readme-ai
     <td><img src="https://img.icons8.com/external-tal-revivo-regular-tal-revivo/96/external-readme-is-a-easy-to-build-a-developer-hub-that-adapts-to-the-user-logo-regular-tal-revivo.png" width="100"></td>
   </tr>
   <tr>
-    <><strong>cloud</strong></td>
+    <td><strong>cloud</strong></td>
     <td><strong>purple</strong></td>
     <td><strong>grey</strong></td>
   </tr>
