deploy: f271c77ed5a7119cc963b5a1d3881f80d0ea7d05

--- a/configuration/index.html
+++ b/configuration/index.html
@@ -934,7 +934,7 @@
 <tr>
 <td><code>--header-style</code></td>
 <td>Header template style</td>
-<td><code>default</code></td>
+<td><code>classic</code></td>
 <td>Changes the overall look of the README header</td>
 </tr>
 <tr>
@@ -976,7 +976,7 @@
 <tr>
 <td><code>--toc-style</code></td>
 <td>Table of contents style</td>
-<td><code>bullets</code></td>
+<td><code>bullet</code></td>
 <td>Changes the format of the table of contents</td>
 </tr>
 <tr>
@@ -1001,12 +1001,12 @@
 </ul>
 <h3 id="-badge-style">--badge-style</h3>
 <ul>
-<li>Options: <code>default</code>, <code>flat</code>, <code>flat-square</code>, <code>for-the-badge</code>, <code>plastic</code>, <code>skills</code>, <code>skills-light</code>, <code>social</code></li>
+<li>Options: <code>flat</code>, <code>flat-square</code>, <code>for-the-badge</code>, <code>plastic</code>, <code>skills</code>, <code>skills-light</code>, <code>social</code></li>
 <li>Impact: Changes the visual appearance of status badges in the README. Different styles can better match your project's aesthetic.</li>
 </ul>
 <h3 id="-header-style">--header-style</h3>
 <ul>
-<li>Options: <code>default</code>, <code>classic</code>, <code>modern</code>, <code>compact</code></li>
+<li>Options: <code>classic</code>, <code>modern</code>, <code>compact</code></li>
 <li>Impact: Alters the layout and design of the README header, including how the project title, description, and badges are displayed.</li>
 </ul>
 <h3 id="-image">--image</h3>
@@ -1026,7 +1026,7 @@
 </ul>
 <h3 id="-toc-style">--toc-style</h3>
 <ul>
-<li>Options: <code>bullets</code>, <code>numbers</code>, <code>fold</code></li>
+<li>Options: <code>bullet</code>, <code>fold</code>, <code>links</code>, <code>number</code></li>
 <li>Impact: Changes how the table of contents is formatted. The <code>fold</code> option creates a collapsible ToC, which can be useful for longer READMEs.</li>
 </ul>
 <h2 id="best-practices">Best Practices</h2>
